# ref_viewer

./: Cargo.toml  LICENSE  README.md  install.sh  ref_viewer.iss
src/: data.rs  exiftool.rs  image.rs  main.rs  shared.rs  window.rs  wndw_left.rs  wndw_main.rs  wndw_right.rs
src/data/: data.rs  exiftool.rs  image.rs
src/shared/: shared.rs
src/window/: window.rs  wndw_gallery.rs  wndw_left.rs  wndw_main.rs  wndw_right.rs  wndw_toolbar.rs
