[package]
name = "ref_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
egui =  "0.28"
eframe =  "0.28"
rfd = "0.14"
regex = "1.10.6"
egui_extras =  {version = "0.28", features = ["image"] }
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "gif",
  "webp",
] }
